resources/scdf-pro/scdf-pro-http-proxy.in.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: scdf-pro-server-httpproxy
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: scdf-server
          port: 80
  virtualhost:
    fqdn: scdf-pro-server.${DATA_E2E_BASE_URL}
